Fix content overlapping toolbar in visual editor

--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -34,6 +34,7 @@
     }
 
 .editor-toolbar {
+    background-color: white;
     display: block;
     height: 65px;
     left: 0;
@@ -41,7 +42,6 @@
     top: 0;
     width: 100%;
     z-index: 500;
-
     box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .15);
 }
 
